# thumbsdown

./: .gitignore  Cargo.toml  Gemfile  README  README.md  TODO.md  install.sh  thumbsdown.gemspec  thumbsdown.rb
.github/workflows/: build-amd-linux.yml  build-arm-linux.yml  build-deb-amd.yml  build-deb-arm.yml  build-macos.yml  publish-ghpkg.yml  release.yml  test.yml
exe/: thumbsdown
src/: cli.rs  error.rs  grid.rs  header.rs  main.rs  video.rs
tests/: integration.rs
