[package]
name = "thumbsdown"
version = "0.1.2"
edition = "2021"
authors = ["Adam Ladachowski <adam.ladachowski@gmail.com>"]
description = "Generate thumbnail grids from video files"
license = "MIT"
repository = "https://github.com/aladac/thumbsdown"
readme = "README.md"
keywords = ["video", "thumbnail", "grid", "ffmpeg"]
categories = ["command-line-utilities", "multimedia::video"]

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
indicatif = "0.17"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
